# mortgage-broker-directory

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
data/raw/territories/: manual.csv
docs/admin/: fsra-outreach-log.md
docs/compliance/: territories.md
docs/decisions/: 0001-initial-scope-clarifications.md  0002-drop-crawl4ai.md  0003-partial-indices.md  0004-fsra-data-access.md
docs/dev/: local-supabase.md
docs/sessions/: session-01-recap.md  session-02-recap.md
docs/strategy/: 01-steps-1-3-scrape-clean-verify.md  02-step-4-specialty-enrichment.md
src/mbd/: __init__.py  config.py
src/mbd/db/: __init__.py  models.py  session.py
src/mbd/db/migrations/: env.py  script.py.mako
src/mbd/db/migrations/versions/: 2026_05_15_ac3eefe7d14b_harden_set_updated_at_search_path_and_.py  2026_05_15_f6958f02df98_initial_schema.py
src/mbd/pipeline/: __init__.py  cli.py
supabase/: config.toml
tests/: test_async_session.py  test_updated_at_trigger.py
