[project]
name = "mbd"
version = "0.1.0"
description = "Canadian Mortgage Broker Directory — Steps 1–3 pipeline (scrape, clean, verify)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "httpx[http2]>=0.28.1",
    "markdownify>=1.2.2",
    "phonenumbers>=9.0.30",
    "playwright>=1.59.0",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "rapidfuzz>=3.14.5",
    "selectolax>=0.4.8",
    "sentry-sdk>=2.60.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
    "structlog>=25.5.0",
    "typer>=0.25.1",
]

[project.scripts]
mbd = "mbd.pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbd"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = "error"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "vcrpy>=8.1.1",
]
